--- a/css/structure-components/header.css
+++ b/css/structure-components/header.css
@@ -6,7 +6,7 @@ header {
     display:flex;
     align-items: center;
     position: relative;
-    /*overflow: hidden;*/
+    overflow: hidden;
 }
 
 header nav {
