--- a/css/structure-components/sidebar.css
+++ b/css/structure-components/sidebar.css
@@ -1,46 +1,23 @@
-.sidebar {
-  position:relative;
+sidebar {
   grid-column: 1;
   grid-row: 2;
+}
+
+sidebar.mobile {
+  grid-column: 1 / 4;
+  grid-row: 3;
+}
+
+.sidebar {
+  position:relative;
   top: 0px;
   left: 0px;
   width: 100%;
   height: 100%;
   z-index: 0;
-}
 
-.sidebar.mobile {
-  display:none;
-}
-
-.sidebar-background {
-  position:absolute;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  background-color: rgb(255, 255, 255);
-  border-radius: 0 0 0 0; /* This line was updated */
-  z-index: -1;
-  }
-
-  .sidebar-background.mobile {
-    display: none;
-  }
-
-  /*I have only the faintest idea of why this works, but it does, so I am not complaining*/
-  .sidebar-background::before {
-    content: "";
-    position: absolute;
-    background-color: transparent;
-    right:-25px;
-    top:0;
-    bottom: -50px;
-    height: 50px;
-    width: 25px;
-    border-top-left-radius: 25px;
-    box-shadow: 0 -25px 0 0 rgb(255, 255, 255); /* This is where the magic happens! */
-  
+  .contents {
+    padding-top:40px;
   }
 
   .sidebar-tab {
@@ -67,9 +44,43 @@
     background-color: rgb(255, 255, 255);
   }
 
+  .sidebar-background {
+    position:absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(255, 255, 255);
+    border-radius: 0 0 0 0; /* This line was updated */
+    z-index: -1;
+  }
+  
+    /*I have only the faintest idea of why this works, but it does, so I am not complaining*/
+  .sidebar-background.desktop::before {
+    content: "";
+    position: absolute;
+    background-color: transparent;
+    right:-25px;
+    top:0;
+    bottom: -50px;
+    height: 50px;
+    width: 25px;
+    border-top-left-radius: 25px;
+    box-shadow: 0 -25px 0 0 rgb(255, 255, 255); /* This is where the magic happens! */
+  }
+}
 
-.sidebar-phone {
-  .footer-content {
+.sidebar.mobile {
+  display:none;
+}
+
+.sidebar-mobile {
+  position:relative;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+
+  .contents {
       display: flex;
       position: relative;
       bottom: 0;
@@ -92,9 +103,20 @@
 
   .profile :hover {
       background-color:  rgb(241, 241, 241);
-    }
-
-  .sidebar-phone.desktop {
-    display:none;
   }
+
+  .sidebar-background {
+    position:absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(255, 255, 255);
+    border-radius: 0 0 0 0; /* This line was updated */
+    z-index: -1;
+  }
+}
+
+.sidebar-mobile.desktop {
+  display: none;
 }
